fix: remove horizontal scroll

--- a/src/App/pages/CatalogPage/CatalogPage.module.scss
+++ b/src/App/pages/CatalogPage/CatalogPage.module.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 100vw;
+   // width: 100vw;
     display: flex;
     justify-content: center;
     padding-top: 100px;
